- Feature: Implemented "PLCompositing::SRPBackgroundColorGradient" which can be used for a simple color gradient background
- Feature: It's now possible to create RTTI class instances via script
- Feature: Added position, rotation and scale transform gimzo scene node modifiers
- Feature: Added "Fast Approximate Anti-Aliasing" (FXAA) support within "PLCompositing"
- Change: Updated Qt from "4.7.0" to "4.8.0"
- Removed: "PLViewerStandalone", use "PLViewer" instead and provide "PLViewer.cfg" in it's executable directory for standalone-mode
- Bugfix: "PLRendererOpenGLES2" font rendering worked on "Tegra 2", but failed on "PowerVR SGX 540"
- Bugfix: Now taking into account odd OpenGL ES 2.0 "gl_FragColor" behaviour on "LG P920 Optimus 3D" (PowerVR SGX 540, Android 2.3.5, "Link Error: Fragment shader was not successfully compiled.")
- Bugfix: "PLRenderer::VertexBuffer::ClearVertexAttributes()" was not resetting the size of the vertex buffer


Changes in PixelLight 0.9.10-R1 (released on December 23, 2011)
- Feature: There's now official 64 bit support (no prebuild SDK, but building PixelLight is easy and described in detail within the "PixelLightBuild"-document)
- Feature: Added Mac OS X support (>=10.6, "PLRendererOpenGL"-port is still under construction)
- Feature: Added "PLInput::SplitTouchPad": This is a gamepad device emulation by using a touch screen making it possible to e.g. move & look at the same time, Android backend implemented
- Feature: Added support for 2D array textures within the renderer (kind of 3D texture, but without filtering between the depth layers)
- Feature: Added scene node modifier "PLEngine::SNMEgoLookController" for restricted 3D look around and "PLEngine::SNMEgoOrbitingController" for restricted 3D orbiting
- Feature request ID: 3443487 (Windows): Added critical section support to the mutex implementation
- Feature request ID: 3439371: Added method "PLCore::Socket::IsDataWaiting()"